--- a/package.json
+++ b/package.json
@@ -1,37 +1,45 @@
 {
-    "name": "collageplus",
-    "title": "CollagePlus Gallery",
-    "description": "An image grid gallery plugin for jQuery.",
-    "keywords": [
-        "grid",
-        "gallery",
-        "photography",
-        "album",
-        "masonry"
-    ],
-    "version": "0.3.3",
-    "author": {
-        "name": "Ed Lea",
-        "url": "http://edlea.com"
-    },
-    "maintainers": [
-        {
-            "name": "Ed Lea",
-            "email": "edleadesign@gmail.com",
-            "url": "http://edlea.com"
-        }
-    ],
-    "licenses": [
-        {
-            "type": "MIT",
-            "url": "http://www.opensource.org/licenses/mit-license.php"
-        }
-    ],
-    "bugs": "https://github.com/ed-lea/jquery-collagePlus/issues",
-    "homepage": "http://collageplus.edlea.com/",
-    "docs": "http://collageplus.edlea.com/",
-    "download": "https://github.com/ed-lea/jquery-collagePlus/zipball/master",
-    "dependencies": {
-        "jquery": ">=1.7"
+  "name": "collageplus",
+  "title": "CollagePlus Gallery",
+  "description": "An image grid gallery plugin for jQuery.",
+  "keywords": [
+    "grid",
+    "gallery",
+    "photography",
+    "album",
+    "masonry"
+  ],
+  "version": "0.3.3",
+  "author": "Ed Lea (http://edlea.com)",
+  "maintainers": [
+    "Ed Lea <edleadesign@gmail.com> (http://edlea.com)"
+  ],
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "http://www.opensource.org/licenses/mit-license.php"
     }
+  ],
+  "bugs": {
+    "url": "https://github.com/ed-lea/jquery-collagePlus/issues"
+  },
+  "homepage": "http://collageplus.edlea.com/",
+  "docs": "http://collageplus.edlea.com/",
+  "download": "https://github.com/ed-lea/jquery-collagePlus/zipball/master",
+  "dependencies": {
+    "jquery": ">=1.7"
+  },
+  "main": "jquery.collagePlus.js",
+  "directories": {
+    "example": "examples"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/antville/jquery-collagePlus.git"
+  },
+  "license": "ISC"
 }
