--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "collageplus",
+  "name": "jquery-collagePlus",
   "title": "CollagePlus Gallery",
   "description": "An image grid gallery plugin for jQuery.",
   "keywords": [
